--- a/.github/workflows/rss-digest.yml
+++ b/.github/workflows/rss-digest.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   send-rss-digest:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
     - name: Checkout repository
