--- a/.github/workflows/rss-digest.yml
+++ b/.github/workflows/rss-digest.yml
@@ -2,8 +2,8 @@ name: RSS Digest Email
 
 on:
   schedule:
-    # Run daily at 8:00 AM UTC (adjust timezone as needed)
-    - cron: '0 8 * * *'
+    # Run daily at 6:00 AM UTC (8:00 AM Zurich time during summer)
+    - cron: '0 6 * * *'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
